[project]
name = "learn-matplotlib"
version = "0.1.0"
description = ""
authors = [
    {name = "klxcoder",email = "klxcoder@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib (>=3.10.1,<4.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
